versioned_docs/version-7.0/ai-integration/connection-strings/content/_azure-open-ai-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* This article explains how to define a connection string to the [Azure OpenAI Service](https://azure.microsoft.com/en-us/products/ai-services/openai-service),  
  enabling RavenDB to seamlessly integrate its [embeddings generation tasks](../../../ai-integration/generating-embeddings/overview.mdx) with your Azure environment.

* In this article:
  * [Define the connection string - from the Studio](../../../ai-integration/connection-strings/azure-open-ai.mdx#define-the-connection-string---from-the-studio)
  * [Define the connection string - from the Client API](../../../ai-integration/connection-strings/azure-open-ai.mdx#define-the-connection-string---from-the-client-api)
  * [Syntax](../../../ai-integration/connection-strings/azure-open-ai.mdx#syntax) 
    
</Admonition>
## Define the connection string - from the Studio

![connection string to azure open ai](../assets/azure-open-ai.png)

1. **Name**  
   Enter a name for this connection string.

2. **Identifier** (optional)  
   Enter an identifier for this connection string.  
   Learn more about the identifier in the [connection string identifier](../../../ai-integration/connection-strings/connection-strings-overview.mdx#the-connection-string-identifier) section.

3. **Connector**  
   Select **Azure OpenAI** from the dropdown menu.

4. **API key**  
   Enter the API key used to authenticate requests to the Azure OpenAI service.

5. **Endpoint**  
   Enter the Azure OpenAI endpoint URL for generating embeddings from text.

6. **Model**  
   Select or enter an Azure OpenAI text embedding model from the dropdown list or enter a new one.

7. **Deployment name**  
   Specify the unique identifier assigned to your model deployment in your Azure environment.

8. **Dimensions** (optional)  
   * Specify the number of dimensions for the output embeddings.  
     Supported only by _text-embedding-3_ and later models.  
   * If not specified, the model's default dimensionality is used.

9. **Max concurrent query batches**: (optional)  
   * When making vector search queries, the content of the search terms must also be converted to embeddings to compare them against the stored vectors.
     Requests to generate such query embeddings via the AI provider are sent in batches.
   * This parameter defines the maximum number of these batches that can be processed concurrently.  
     You can set a default value using the [Ai.Embeddings.MaxConcurrentBatches](../../../server/configuration/ai-integration-configuration.mdx#aiembeddingsmaxconcurrentbatches) configuration key.

10. Click **Test Connection** to confirm the connection string is set up correctly.

11. Click **Save** to store the connection string or **Cancel** to discard changes.



## Define the connection string - from the Client API

<TabItem value="create_connection_string_azure_open_ai" label="create_connection_string_azure_open_ai">
<CodeBlock language="csharp">
{`using (var store = new DocumentStore())
\{
    // Define the connection string to Azure OpenAI
    var connectionString = new AiConnectionString
    \{
        // Connection string name & identifier
        Name = "ConnectionStringToAzureOpenAI", 
        Identifier = "identifier-to-the-connection-string", // optional
        
        // Azure OpenAI connection settings
        AzureOpenAiSettings = new AzureOpenAiSettings(
            apiKey: "your-api-key",
            endpoint: "https://your-resource-name.openai.azure.com",
            model: "text-embedding-3-small",
            deploymentName: "your-deployment-name")
    \};
    
    // Optionally, override the default maximum number of query embedding batches
    // that can be processed concurrently 
    connectionString.AzureOpenAiSettings.EmbeddingsMaxConcurrentBatches = 10;
    
    // Deploy the connection string to the server
    var operation = new PutConnectionStringOperation<AiConnectionString>(connectionString);
    var putConnectionStringResult = store.Maintenance.Send(operation);
\}
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="azure_open_ai_settings" label="azure_open_ai_settings">
<CodeBlock language="csharp">
{`public class AiConnectionString
\{
    public string Name \{ get; set; \}
    public string Identifier \{ get; set; \}
    public AzureOpenAiSettings AzureOpenAiSettings \{ get; set; \}
\}

public class AzureOpenAiSettings : AbstractAiSettings
\{
    public string ApiKey \{ get; set; \}
    public string Endpoint \{ get; set; \}
    public string Model \{ get; set; \}
    public string DeploymentName \{ get; set; \}
    public int? Dimensions \{ get; set; \}
\}

public class AbstractAiSettings
\{
    public int? EmbeddingsMaxConcurrentBatches \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>




