versioned_docs/version-7.1/ai-integration/connection-strings/content/_azure-open-ai-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import ContentFrame from '@site/src/components/ContentFrame';
import Panel from '@site/src/components/Panel';

<Admonition type="note" title="">

* This article explains how to define a connection string to the [Azure OpenAI Service](https://azure.microsoft.com/en-us/products/ai-services/openai-service),  
  enabling RavenDB to use Azure OpenAI models for [Embeddings generation tasks](../../../ai-integration/generating-embeddings/overview.mdx),
  [Gen AI tasks](../../../ai-integration/gen-ai-integration/overview.mdx), and [AI agents](../../../ai-integration/ai-agents/overview.mdx).    
    
* In this article:
  * [Define the connection string - from the Studio](../../../ai-integration/connection-strings/azure-open-ai.mdx#define-the-connection-string-from-the-studio)
    * [Configuring a text embedding model](../../../ai-integration/connection-strings/azure-open-ai.mdx#configuring-a-text-embedding-model)
    * [Configuring a chat model](../../../ai-integration/connection-strings/azure-open-ai.mdx#configuring-a-chat-model)
  * [Define the connection string - from the Client API](../../../ai-integration/connection-strings/azure-open-ai.mdx#define-the-connection-string-from-the-client-api)
  * [Syntax](../../../ai-integration/connection-strings/azure-open-ai.mdx#syntax) 
    
</Admonition>

<Panel heading="Define the connection string - from the Studio">

### Configuring a text embedding model

![connection string to azure open ai](../assets/azure-open-ai-1.png)

1. **Name**  
   Enter a name for this connection string.

2. **Identifier** (optional)  
   Enter an identifier for this connection string.  
   Learn more about the identifier in the [connection string identifier](../../../ai-integration/connection-strings/overview.mdx#identifier) section.

3. **Model Type**  
   Select "Text Embeddings".

4. **Connector**  
   Select **Azure OpenAI** from the dropdown menu.

5. **API key**  
   Enter the API key used to authenticate requests to the Azure OpenAI service.

6. **Endpoint**  
   Enter the base URL of your Azure OpenAI resource.

7. **Model**  
   Select or enter an Azure OpenAI text embedding model from the dropdown list or enter a new one.

8. **Deployment name**  
   Specify the unique identifier assigned to your model deployment in your Azure environment.

9. **Dimensions** (optional)  
   * Specify the number of dimensions for the output embeddings.  
     Supported only by _text-embedding-3_ and later models.  
   * If not specified, the model's default dimensionality is used.

10. **Max concurrent query batches**: (optional)  
    * When making vector search queries, the content of the search terms must also be converted to embeddings to compare them against the stored vectors.  
      Requests to generate such query embeddings via the AI provider are sent in batches.
    * This parameter defines the maximum number of these batches that can be processed concurrently.  
      You can set a default value using the [Ai.Embeddings.MaxConcurrentBatches](../../../server/configuration/ai-integration-configuration.mdx#aiembeddingsmaxconcurrentbatches) configuration key.

11. Click **Test Connection** to confirm the connection string is set up correctly.

12. Click **Save** to store the connection string or **Cancel** to discard changes.

--- 
    
### Configuring a chat model

* When configuring a chat model, the UI displays the same base fields as those used for [text embedding models](../../../ai-integration/connection-strings/azure-open-ai.mdx#configuring-a-text-embedding-model),  
  including the connection string _Name_, optional _Identifier_, _API Key_, _Endpoint_, _Deployment Name_, and _Model_ name.

* One additional setting is specific to chat models: _Temperature_.

![connection string to azure open ai](../assets/azure-open-ai-2.png)

1. **Model Type**  
   Select "Chat".

2. **Model**  
   Enter the name of the Azure OpenAI model to use for chat completions.

3. **Temperature** (optional)  
   The temperature setting controls the randomness and creativity of the model’s output.  
   Valid values typically range from `0.0` to `2.0`:  
     * Higher values (e.g., `1.0` or above) produce more diverse and creative responses.
     * Lower values (e.g., `0.2`) result in more focused, consistent, and deterministic output.
     * If not explicitly set, Azure OpenAI uses a default temperature of `1.0`.  
       See [Azure OpenAI chat completions parameters](https://learn.microsoft.com/en-us/azure/ai-foundry/openai/reference#request-body-2).

</Panel>

<Panel heading="Define the connection string - from the Client API">

<Tabs groupId='languageSyntax'>
<TabItem value="Connection_string_for_text_embedding_model" label="Connection_string_for_text_embedding_model">
```csharp
using (var store = new DocumentStore())
{
    // Define the connection string to Azure OpenAI
    var connectionString = new AiConnectionString
    {
        // Connection string Name & Identifier
        Name = "ConnectionStringToAzureOpenAI", 
        Identifier = "identifier-to-the-connection-string", // optional
        
        // Model type
        ModelType = AiModelType.TextEmbeddings,
        
        // Azure OpenAI connection settings
        AzureOpenAiSettings = new AzureOpenAiSettings
        {
            ApiKey = "your-api-key",
            Endpoint = "https://your-resource-name.openai.azure.com",
    
            // Name of text embedding model to use
            Model = "text-embedding-3-small",
    
            DeploymentName = "your-deployment-name",
    
            // Optionally, override the default maximum number of query embedding batches
            // that can be processed concurrently 
            EmbeddingsMaxConcurrentBatches = 10
        }
    };
    
    // Deploy the connection string to the server
    var putConnectionStringOp = 
        new PutConnectionStringOperation<AiConnectionString>(connectionString);
    var putConnectionStringResult = store.Maintenance.Send(putConnectionStringOp);
}
```
</TabItem>
<TabItem value="Connection_string_for_chat_model" label="Connection_string_for_chat_model">
```csharp
using (var store = new DocumentStore())
{
    // Define the connection string to Azure OpenAI
    var connectionString = new AiConnectionString
    {
        // Connection string Name & Identifier
        Name = "ConnectionStringToAzureOpenAI", 
        Identifier = "identifier-to-the-connection-string", // optional
        
        // Model type
        ModelType = AiModelType.Chat,
        
        // Azure OpenAI connection settings
        AzureOpenAiSettings = new AzureOpenAiSettings
        {
            ApiKey = "your-api-key",
            Endpoint = "https://your-resource-name.openai.azure.com",
    
            // Name of chat model to use
            Model = "gpt-4o-mini",
    
            DeploymentName = "your-deployment-name",
            
            // Optionally, set the model's temperature
            Temperature = 0.4
        }
    };
    
    // Deploy the connection string to the server
    var putConnectionStringOp = 
        new PutConnectionStringOperation<AiConnectionString>(connectionString);
    var putConnectionStringResult = store.Maintenance.Send(putConnectionStringOp);
}
```
</TabItem>
</Tabs>

</Panel>

<Panel heading="Syntax">

<TabItem value="azure_open_ai_settings" label="azure_open_ai_settings">
```csharp
public class AiConnectionString
{
    public string Name { get; set; }
    public string Identifier { get; set; }
    public AiModelType ModelType { get; set; }
    public AzureOpenAiSettings AzureOpenAiSettings { get; set; }
}

public class AzureOpenAiSettings : AbstractAiSettings
{
    public string ApiKey { get; set; }
    public string Endpoint { get; set; }
    public string Model { get; set; }
    public string DeploymentName { get; set; }
    
    // Relevant only for TEXT EMBEDDING models:
    // Specifies the number of dimensions in the generated embedding vectors.
    public int? Dimensions { get; set; }
    
    // Relevant only for CHAT models:
    // Controls the randomness and creativity of the model’s output.
    // Higher values (e.g., 1.0 or above) produce more diverse and creative responses.
    // Lower values (e.g., 0.2) result in more focused and deterministic output.
    // If set to 'null', the temperature is not sent and the model's default will be used.
    public double? Temperature { get; set; }
}

public class AbstractAiSettings
{
    public int? EmbeddingsMaxConcurrentBatches { get; set; }
}
```
</TabItem>

</Panel>